# openfabmap-python

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: ChowLiuTree.cpp  ChowLiuTree.h  FabMapVocabluary.cpp  FabMapVocabluary.h  PythonBindings.cpp  detectorsAndExtractors.cpp  detectorsAndExtractors.h  openFABMAPPython.cpp  openFABMAPPython.h
